src/objects/Sign_Up_Note__c.object
<CustomObject>
    <fields>
        <fullName>API_Response__c</fullName>
        <label>API Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_ID__c</fullName>
        <inlineHelpText>Please make sure the adwords id is in xxx-xxx-xxxx format. 
If unknown, please put in 000-000-0000</inlineHelpText>
        <label>Adwords ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_daily_budget__c</fullName>
        <label>Agreed daily budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_target_locations__c</fullName>
        <label>Agreed target locations</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_covered_in_healthcheck__c</fullName>
        <label>Areas covered in healthcheck</label>
        <picklist>
            <picklistValues>
                <fullName>Quality scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ctr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>impressions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>impression share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>call tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>site links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ad copy ad relevance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>geo targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Query Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No healthcheck done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adwords Express Account</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Avg_Pos__c</fullName>
        <label>Avg Pos</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <formula>Sign_up__r.Account__r.BJB_Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BJB Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Instruction__c</fullName>
        <inlineHelpText>When filled, billing instructions will be sent to accounts team</inlineHelpText>
        <label>Billing Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sign Up Notes</relationshipLabel>
        <relationshipName>Sign_Up_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPC__c</fullName>
        <label>CPC</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_start_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Campaign start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_adwords_account__c</fullName>
        <label>Current adwords account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_daily_budget__c</fullName>
        <label>Current daily budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Sale__c</fullName>
        <label>Date of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_you_record_the_signup_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did you record the signup call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_have_a_current_active_fb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do they have a current active fb?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Source__c</fullName>
        <label>From Source</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Referred A Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects List Immediate HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects List HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback Campaign</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthcheck_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcheck done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_would_you_best_describe_the_client__c</fullName>
        <label>How would you best describe the client</label>
        <picklist>
            <picklistValues>
                <fullName>rational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>assertive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dominant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>emotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>expressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>analytical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>laid back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unexpressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>distracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>doesn&apos;t listen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <globalPicklist>Industry</globalPicklist>
        <label>Industry</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Pricing_Correct__c</fullName>
        <label>Is Pricing Correct</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Tabs_discussed__c</fullName>
        <label>No of Tabs discussed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Google Plus</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_recording_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes from recording done?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerID1__c</fullName>
        <label>OwnerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerID__c</fullName>
        <formula>Sign_up__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Superior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Bespoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+ Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+ Setup &amp; Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position_in_the_company__c</fullName>
        <label>Position in the company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_S__c</fullName>
        <label>Q/S</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEO_Website__c</fullName>
        <label>SEO Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sign_up__c</fullName>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipLabel>Sign Up Notes</relationshipLabel>
        <relationshipName>Sign_Up_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <label>Target Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_custom_tabs_required__c</fullName>
        <label>Type of custom tabs required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_the_main_selling_point__c</fullName>
        <label>What are the main selling point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_two_areas_are_most_important_to_cli__c</fullName>
        <label>Two areas are most important to client</label>
        <picklist>
            <picklistValues>
                <fullName>More sales and leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher ad positions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert advice</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Sign Up Note</label>
    <nameField>
        <displayFormat>Note - {0000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Up Notes</pluralLabel>
    <recordTypes>
        <fullName>Adwords_Signup_Notes</fullName>
        <active>true</active>
        <label>Adwords Signup Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facebook_Signup_Notes</fullName>
        <active>true</active>
        <label>Facebook Signup Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Google_Plus</fullName>
        <active>true</active>
        <label>Google Plus</label>
    </recordTypes>
    <recordTypes>
        <fullName>SEO_Signup_Notes</fullName>
        <active>true</active>
        <label>SEO Signup Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Engage_Signup_Notes</fullName>
        <active>true</active>
        <description>Social Engage Signup Notes</description>
        <label>Social Engage Signup Notes</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Adwords_Id_Must_be_Ten_Digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Adwords_ID__c)), NOT(REGEX(Adwords_ID__c, &quot;[0-9]{3}-[0-9]{3}-[0-9]{4}&quot;)))</errorConditionFormula>
        <errorDisplayField>Adwords_ID__c</errorDisplayField>
        <errorMessage>Please make sure the adwords id is in xxx-xxx-xxxx format.
If unknown, please put in 000-000-0000</errorMessage>
    </validationRules>
</CustomObject>